; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_musb_otg.c_musbotg_suspend_host.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_musb_otg.c_musbotg_suspend_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.musbotg_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@MUSB2_REG_POWER = common dso_local global i32 0, align 4
@MUSB2_MASK_SUSPMODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.musbotg_softc*)* @musbotg_suspend_host to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @musbotg_suspend_host(%struct.musbotg_softc* %0) #0 {
  %2 = alloca %struct.musbotg_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.musbotg_softc* %0, %struct.musbotg_softc** %2, align 8
  %4 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %5 = getelementptr inbounds %struct.musbotg_softc, %struct.musbotg_softc* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %24

10:                                               ; preds = %1
  %11 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %12 = load i32, i32* @MUSB2_REG_POWER, align 4
  %13 = call i32 @MUSB2_READ_1(%struct.musbotg_softc* %11, i32 %12)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* @MUSB2_MASK_SUSPMODE, align 4
  %15 = load i32, i32* %3, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %3, align 4
  %17 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %18 = load i32, i32* @MUSB2_REG_POWER, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @MUSB2_WRITE_1(%struct.musbotg_softc* %17, i32 %18, i32 %19)
  %21 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %22 = getelementptr inbounds %struct.musbotg_softc, %struct.musbotg_softc* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 4
  br label %24

24:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @MUSB2_READ_1(%struct.musbotg_softc*, i32) #1

declare dso_local i32 @MUSB2_WRITE_1(%struct.musbotg_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
